--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,255 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.grid-parent {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 2rem;
+  position: relative;
+}
+
+.row.grid-parent {
+  width: 100%;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 6rem;
+  position: relative;
+}
+
+.child {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 100px;
+
+}
+
+.card {
+  min-width: 200px;
+  border: 2px dashed grey;
+  border-radius: .375rem;
+  position: relative;
+}
+
+.line.grid-parent > .grid-parent:first-child:before {
+  width: 100%;
+  height: 2px;
+  content: '';
+  display: block;
+  position: absolute;
+  background: #9ea8b1;
+  top: calc(-1rem - 1px);
+  right: 0;
+  transform: translateX(50%);
+  border-radius: 1px 0 0 0;
+}
+
+.line.grid-parent > .grid-parent::before {
+  width: calc(100% + 6rem);
+  height: 2px;
+  content: '';
+  display: block;
+  position: absolute;
+  background: #9ea8b1;
+  top: calc(-1rem - 1px);
+  right: 0;
+  left: 0;
+}
+
+.line.grid-parent > .grid-parent:last-child:before {
+  width: 100%;
+  height: 2px;
+  content: '';
+  display: block;
+  position: absolute;
+  background: #9ea8b1;
+  top: calc(-1rem - 1px);
+  right: initial;
+  left: 0;
+  transform: translateX(calc(-50% + 2px) );
+  border-radius: 0 1px 0 0;
+}
+
+.top-line.card::before {
+  width: 2px;
+  height: 1.1rem;
+  content: '';
+  display: block;
+  position: absolute;
+  background: #9ea8b1;
+  top: -1.2rem;
+  left: 50%;
+}
+
+.bottom-line.card::after {
+  width: 2px;
+  height: 1.1rem;
+  content: '';
+  display: block;
+  position: absolute;
+  background: #9ea8b1;
+  bottom: -1.2rem;
+  left: 50%;
+}
+
+.card .controls {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  display: flex;
+  gap: 0.25rem;
+
+  transform: translate(calc(100% + 0.5rem), -50% );
+}
+
+.card .btn {
+  width: 1.25rem;
+  height: 1.25rem;
+  padding: 0.25rem;
+  border: 0;
   color: white;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 0;
+  border-radius: 60px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  background-color: #9ea8b1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.error {
+  background-color: #b34045;
 }
+
+.warning {
+  background-color: #fecf6d;
+}
+
+.success {
+  background-color: #2d884d;
+}
+
+
+.card .btn svg {
+  width: 0.8rem;
+  height: 1rem;
+  fill: currentColor;
+}
+
+.card .btn:hover {
+  opacity: 0.8;
+}
+
+.card-content {
+  display: flex;
+}
+
+.input {
+  max-width: 100%;
+  width: 100%;
+  padding: 0.5rem 1rem;
+  border: 0;
+
+  outline: 0;
+
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem 2rem;
+  border-bottom: 2px solid #ccd0d7;
+  height: 6.25rem;
+}
+
+.main {
+  max-width: 100vw;
+  height: calc(100vh - 6.25rem);
+}
+
+.App {
+  max-width: 100vw;
+}
+
+
+
+.btn.primary {
+  background-color: aqua;
+}
+
+.btn.secondary {
+  background-color: white;
+}
+
+.btn {
+  padding: 0.5rem 0.75rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.select {
+  height: 100%;
+  padding: 0.5rem 0.75rem 0.5rem 0.5rem;
+  border-right: 2px solid #ccd0d7;
+  border-left: 2px solid #ccd0d7;
+}
+
+.btn-group {
+  display: flex;
+  align-items: center;
+}
+
+.header h1 {
+  position: sticky;
+  top: 0;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.header .btn {
+  background: white;
+}
+.header .btn svg {
+  width: 1rem;
+  height: 1rem;
+}
+
+.header .btn {
+  height: 100%;
+
+}
+
+.header .controls {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.btn svg {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.drag-area {
+  padding: 2rem;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  cursor: move;
+
+}
+
+.draggable-element {
+  position: relative;
+}
+
+
+
